# ocaml-http-benchmark

./: .gitattributes  .ocamlformat  README.md
benchmark/cohttp-2.5/: README.md  dune-project  http-bench-cohttp-2_5.opam  http-bench-cohttp-2_5.opam.locked
benchmark/cohttp-2.5/src/: cohttp_lwt.ml
benchmark/cohttp-3.0/: Makefile  README.md  dune-project  http-bench-cohttp-3_0.opam  http-bench-cohttp-3_0.opam.locked
benchmark/cohttp-3.0/src/: cohttp_lwt.ml  dune
benchmark/httpaf/: README.md  dune-project  http-bench-httpaf.opam.locked
benchmark/httpaf-fork/: README.md  dune-project  http-bench-httpaf-fork.opam  http-bench-httpaf-fork.opam.locked
benchmark/httpaf-fork/src/: httpaf_lwt.ml  httpaf_lwt_bigstring.ml
benchmark/httpaf-multicore/: Makefile  README.md  dune-project  http-bench-httpaf-multicore.opam  http-bench-httpaf-multicore.opam.locked
benchmark/httpaf-multicore/src/: dune  httpaf_lwt_bigstring.ml
benchmark/httpaf/src/: dune  httpaf_lwt.ml  httpaf_lwt_bigstring.ml
script/: run.sh
