(lang dune 2.0)

(name http-bench-httpaf)

(documentation "https://tmattio.github.io/ocaml-http-benchmark/")

(source
 (github tmattio/ocaml-http-benchmark))

(license MIT)

(authors "Thibaut Mattio")

(maintainers "Thibaut Mattio")

(generate_opam_files true)

(package
 (name http-bench-httpaf)
 (synopsis "OCaml HTTP benchmark for Httpaf")
 (description "OCaml HTTP benchmark for Httpaf\n")
 (depends
  (ocaml
   (>= 4.08.0))
  dune
  httpaf-lwt-unix
  conf-libev))
